Specify type: commonjs instead of module

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "tinyrm",
 	"version": "1.0.1",
-	"type": "module",
+	"type": "commonjs",
 	"license": "MIT",
 	"description": "A tiny CLI tool to recursively remove files and directories",
 	"repository": "br0p0p/tinyrm",
