--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"license": "MIT",
 	"description": "A tiny CLI tool to recursively remove files and directories",
 	"repository": "br0p0p/tinyrm",
+	"packageManager": "pnpm@9.5.0",
 	"bin": {
 		"tinyrm": "./dist/bin.js"
 	},
@@ -12,7 +13,7 @@
 		"node": ">=14.14"
 	},
 	"scripts": {
-		"build": "esbuild src/bin.js --bundle --platform=node --target=node14.14 --outfile=dist/bin.js",
+		"build": "esbuild src/bin.mjs --bundle --platform=node --target=node18 --outfile=dist/bin.js --analyze=verbose",
 		"format": "prettier --write src *.md package.json",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -24,6 +25,10 @@
 	],
 	"author": {
 		"name": "Caleb Williams"
+	},
+	"dependencies": {
+		"fdir": "^6.1.1",
+		"picomatch": "^4.0.2"
 	},
 	"devDependencies": {
 		"esbuild": "^0.23.0",
